Enlarge images for mobile

--- a/src/htdocs/css/map/_InteractiveMapView.scss
+++ b/src/htdocs/css/map/_InteractiveMapView.scss
@@ -7,3 +7,11 @@
     width: 35px;
   }
 }
+
+.legend-intensity-contour,
+.legend-intensity-scale,
+.legend-geocoded-area,
+.legend-seismic-station,
+.legend-shakemap-station {
+  width: 235px;
+}
