Add legends for epicenter, faults, and plates

--- a/src/htdocs/css/map/_InteractiveMapView.scss
+++ b/src/htdocs/css/map/_InteractiveMapView.scss
@@ -8,10 +8,13 @@
   }
 }
 
+.legend-epicenter,
+.legend-geocoded-area,
 .legend-intensity-contour,
 .legend-intensity-scale,
-.legend-geocoded-area,
 .legend-seismic-station,
-.legend-shakemap-station {
+.legend-shakemap-station,
+.legend-tectonic-plates,
+.legend-us-faults {
   width: 235px;
 }
