added import for NearbySeismicityPinView styles

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -63,6 +63,8 @@
 
 @import 'moment-tensor/_MomentTensorPinView.scss';
 
+@import 'nearby-seismicity/_NearbySeismicityPinView.scss';
+
 @import 'oaf/_ForecastTableView.scss';
 @import 'oaf/_OafModule.scss';
 
