--- a/src/htdocs/css/nearby-seismicity/_NearbySeismicityPinView.scss
+++ b/src/htdocs/css/nearby-seismicity/_NearbySeismicityPinView.scss
@@ -1,4 +1,20 @@
 .nearby-seismicity-pin-view {
   font-size: 0.88em;
   margin: 0.5em 0 0;
+
+  > dd {
+    margin: 0.5em 0 1em;
+  }
+
+  > dt {
+    font-size: 0.88em;
+  }
+
+  .pin-icon {
+      width: 25px;
+      display: inline;
+      height: auto;
+      vertical-align: middle;
+      margin: 0 1em 0 0.5em;
+  }
 }
