--- a/src/htdocs/css/nearby-seismicity/_NearbySeismicityPinView.scss
+++ b/src/htdocs/css/nearby-seismicity/_NearbySeismicityPinView.scss
@@ -1,20 +1,29 @@
-.nearby-seismicity-pin-view {
+.flex-image-grid.nearby-seismicity-pin-view {
   font-size: 0.88em;
   margin: 0.5em 0 0;
 
-  > dd {
-    margin: 0.5em 0 1em;
+  > li {
+    display: flex;
+    flex-direction: row;
+    margin: 1em 0;
   }
 
-  > dt {
-    font-size: 0.88em;
-  }
+  .image-container {
+    width: 40px;
 
-  .pin-icon {
-      width: 25px;
-      display: inline;
+    > .pin-icon {
       height: auto;
-      vertical-align: middle;
-      margin: 0 1em 0 0.5em;
+      width: 100%;
+      margin-right: 1em;
+    }
+  }
+
+  .text-container {
+    flex-direction: column;
+    margin-left: 1em;
+
+    > h4 {
+      margin: 0;
+    }
   }
 }
