Working on routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <h1>Earthquake Event Page</h1>
+
+<nav>
+  <a routerLink="/unknown" routerLinkActive="active">Unknown Event</a>
+  <a routerLink="/randomid">RandomId Event</a>
+</nav>
+
 <router-outlet></router-outlet>
