Moving router subscription to sub-component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
 <nav>
   <a routerLink="/unknown" routerLinkActive="active">Unknown Event</a>
   <a routerLink="/randomid">RandomId Event</a>
+
+  <a routerLink="/event1">Event 1</a>
+  <a routerLink="/event2">Event 2</a>
 </nav>
 
 <router-outlet></router-outlet>
