--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <h1>Earthquake Event Page</h1>
 
 <nav>
-  <a routerLink="/unknown" routerLinkActive="active">Unknown Event</a>
-  <a routerLink="/randomid">RandomId Event</a>
-
-  <a routerLink="/event1">Event 1</a>
-  <a routerLink="/event2">Event 2</a>
+  <a routerLink="/unknown" routerLinkActive="active">Unknown Event</a><br/>
+  <br/>
+  <a routerLink="/us1000chhc">us1000chhc</a><br/>
+  <a routerLink="/us2000crmu">us2000crmu</a>
 </nav>
 
 <router-outlet></router-outlet>
