Added some simply output to executive component.

--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,3 +1,7 @@
-<p>
-  executive works!
-</p>
+<ng-container *ngIf="eventService.event$ | async; let event">
+  <ul>
+    <li *ngFor="let type of objectKeys(event?.properties.products)">
+      {{ type }}
+    </li>
+  </ul>
+</ng-container>
