--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
       <a routerLink="/us2000crmu/executive">us2000crmu (executive)</a><br/>
       <a routerLink="/us2000crmu/region-info">us2000crmu (region-info)</a>
     </li>
+    <li>
+      <a routerLink="/nc72733850">nc72733850 (deleted)</a>
+    </li>
   </ul>
 </nav>
 
