--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,7 +1,3 @@
-<ng-container *ngIf="eventService.event$ | async; let event">
-  <ul>
-    <li *ngFor="let type of objectKeys(event?.properties.products)">
-      {{ type }}
-    </li>
-  </ul>
-</ng-container>
+<p>
+  executive component works!
+</p>
