--- a/src/app/event-page/event-page/event-page.component.html
+++ b/src/app/event-page/event-page/event-page.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="this.eventService.event$ | async; else noEvent; let event">
-  <eq-event-header [event]="event"></eq-event-header>
+  <event-page-header [event]="event"></event-page-header>
 
   <router-outlet></router-outlet>
 
