Make tests pass.

--- a/src/app/event-page/footer/footer.component.html
+++ b/src/app/event-page/footer/footer.component.html
@@ -2,7 +2,7 @@
   <h3>Contributors</h3>
   <ol [innerHTML]="event | contributorList:contributors"></ol>
 
-  <h3>Additoinal Information</h3>
+  <h3>Additional Information</h3>
   <ul>
     <!-- TODO :: Scenario mode -->
     <li>
