--- a/src/app/event-page/event-page/event-page.component.html
+++ b/src/app/event-page/event-page/event-page.component.html
@@ -1,6 +1,12 @@
 <ng-container *ngIf="this.eventService.event$ | async; else noEvent; let event">
   <event-page-header [event]="event"></event-page-header>
 
+  <ng-container *ngIf="event?.properties?.status === 'deleted'">
+    <p class="error">
+      Event Deleted!
+    </p>
+  </ng-container>
+
   <router-outlet></router-outlet>
 
   <event-page-footer
