save progress, added reusable product-page module, example integration into origin module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,11 @@
       <a routerLink="/us2000crmu/region-info">us2000crmu (region-info)</a>
     </li>
     <li>
+      <a routerLink="/us2000cmy3/origin">us2000cmy3 (origin)</a><br/>
+      <a routerLink="/us2000cmy3/origin" [queryParams]="{source: 'ak'}">us2000cmy3 (origin, ak source)</a><br/>
+      <a routerLink="/us2000cmy3/origin" [queryParams]="{source: 'at'}">us2000cmy3 (origin, at source)</a>
+    </li>
+    <li>
       <a routerLink="/nc72733850">nc72733850 (deleted)</a>
     </li>
   </ul>
