--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav>
+  <a routerLink="/notfound">Not Found</a><br/>
   <a routerLink="/unknown" routerLinkActive="active">Unknown Event</a><br/>
   <br/>
   <ul>
