Change how product modules customize header/footer content

--- a/src/app/origin/origin-details/origin-details.component.html
+++ b/src/app/origin/origin-details/origin-details.component.html
@@ -1,7 +1,4 @@
-<p>
-  origin-details works!
-</p>
 
-<pre>
-  {{toJson(origin)}}
-</pre>
+<h4>Origin Details</h4>
+
+<pre>{{toJson(product)}}</pre>
