--- a/src/app/product-page/footer/footer.component.html
+++ b/src/app/product-page/footer/footer.component.html
@@ -1,1 +1,6 @@
-<product-page-download [product]="product"></product-page-download>
+<footer class="product-footer">
+  <!-- custom module footer content -->
+  <ng-content></ng-content>
+
+  <product-page-download [product]="product"></product-page-download>
+</footer>
