--- a/src/app/product-page/header/header.component.html
+++ b/src/app/product-page/header/header.component.html
@@ -5,7 +5,7 @@
   <small class="attribution">
     Contributed by
     <span [innerHTML]="product | contributorList:contributors:event "></span>
-    last updated {{product.updateTime | dateTime}}
+    last updated {{product?.updateTime | dateTime}}
   </small>
 
   <ul class="quality-statements">
