Address comments, refactor unique out, update product-page classnames

--- a/src/app/product-page/footer/footer.component.html
+++ b/src/app/product-page/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="product-footer">
+<footer class="product-page-footer">
   <!-- custom module footer content -->
   <ng-content></ng-content>
 
