--- a/src/app/product-page/header/header.component.html
+++ b/src/app/product-page/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="product-header">
+<header class="product-page-header">
   <!-- custom module header content -->
   <ng-content></ng-content>
 
