Using component instead of pipe. Using service.

--- a/src/app/product-page/download/download.component.html
+++ b/src/app/product-page/download/download.component.html
@@ -1,12 +1,14 @@
-<mat-expansion-panel (opened)="loadContentsXml()">
+<mat-expansion-panel (opened)="onOpen()" (closed)="onClosed()">
   <mat-expansion-panel-header>
-    Downloads
+    <h3>Downloads</h3>
   </mat-expansion-panel-header>
 
   <ng-template matExpansionPanelContent>
-    <ng-container *ngIf="this.contents$ | async; else noContent; let content">
+    <ng-container *ngIf="this.service.contents$ | async; else noContent; let content">
       <ul>
-        <li *ngFor="let item of content" [innerHTML]="item | downloadItem"></li>
+        <li *ngFor="let item of content">
+          <product-page-download-item [item]="item"></product-page-download-item>
+        </li>
       </ul>
     </ng-container>
   </ng-template>
