Fixed test scaffolding so they at least run.

--- a/src/app/product-page/download/download.component.html
+++ b/src/app/product-page/download/download.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel (opened)="onOpen()" (closed)="onClosed()">
+<mat-expansion-panel (opened)="onOpen()" (closed)="onClose()">
   <mat-expansion-panel-header>
     <h3>Downloads</h3>
   </mat-expansion-panel-header>
