--- a/src/app/origin/phase/phase.component.html
+++ b/src/app/origin/phase/phase.component.html
@@ -1,44 +1,41 @@
 <ng-container *ngIf="eventService.event$ | async; else noEvent; let event">
   <ng-container *ngIf="quakemlService.quakeml$ | async; else noQuakeml; let quakeml">
 
-    <mat-table [dataSource]="getPhases(quakeml)">
+    <mat-table [dataSource]="sortedPhases" matSort (matSortChange)="sortPhases($event)">
+
       <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
       <mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></mat-row>
 
-
       <ng-container matColumnDef="channel">
-        <mat-header-cell *matHeaderCellDef>Channel</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Channel</mat-header-cell>
         <mat-cell *matCellDef="let arrival">
-          {{ arrival.waveformID?.networkCode }}
-          {{ arrival.waveformID?.stationCode }}
-          {{ arrival.waveformID?.channelCode }}
-          {{ arrival.waveformID?.locationCode }}
+          {{ arrival.channel }}
         </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="distance">
-        <mat-header-cell *matHeaderCellDef>Distance</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Distance</mat-header-cell>
         <mat-cell *matCellDef="let arrival">
           {{ arrival.distance }}
         </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="azimuth">
-        <mat-header-cell *matHeaderCellDef>Azimuth</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Azimuth</mat-header-cell>
         <mat-cell *matCellDef="let arrival">
           {{ arrival.azimuth }}
         </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="phase">
-          <mat-header-cell *matHeaderCellDef>Phase</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Phase</mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.phase }}
           </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="time">
-          <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Time</mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             <time dateTime="{{ arrival.time.toISOString() }}">
               {{ arrival.timeRelative / 1000 }}s
@@ -47,21 +44,21 @@
       </ng-container>
 
       <ng-container matColumnDef="status">
-          <mat-header-cell *matHeaderCellDef>Phase</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.status }}
           </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="residual">
-          <mat-header-cell *matHeaderCellDef>Residual</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Residual</mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.timeResidual }}
           </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="weight">
-          <mat-header-cell *matHeaderCellDef>Weight</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Weight</mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.timeWeight }}
           </mat-cell>
@@ -77,5 +74,11 @@
 </ng-template>
 
 <ng-template #noQuakeml>
+  <ng-container *ngIf="quakemlService.error; else loadingQuakeml; let error">
+    <p class="alert info">No phase information available.</p>
+  </ng-container>
+</ng-template>
+
+<ng-template #loadingQuakeml>
   <p>Loading quakeml</p>
 </ng-template>
