fixed names and file names, updated imports and added components to impact component

--- a/src/app/impact/impact/impact.component.html
+++ b/src/app/impact/impact/impact.component.html
@@ -1,3 +1,7 @@
 <p>
   impact works!
 </p>
+
+<app-dyfi-summary></app-dyfi-summary>
+<app-shakemap-summary></app-shakemap-summary>
+<app-pager-summary></app-pager-summary>
