cleaned up code

--- a/src/app/technical/technical/technical.component.html
+++ b/src/app/technical/technical/technical.component.html
@@ -1,3 +1,7 @@
 <p>
   technical works!
 </p>
+
+<app-origin-summary></app-origin-summary>
+<app-moment-tensor-summary></app-moment-tensor-summary>
+
