--- a/src/app/origin/phase/phase.component.html
+++ b/src/app/origin/phase/phase.component.html
@@ -61,7 +61,7 @@
           </mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             <time dateTime="{{ arrival.time }}">
-              {{ arrival.timeRelative / 1000 }}s
+              {{ arrival.timeRelative }}s
             </time>
           </mat-cell>
       </ng-container>
