create scaffold for origin pin

--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,9 +1,6 @@
-<p>
-  executive component works!
-</p>
-
-
 <ng-container *ngIf="eventService.event$ | async; let event">
+
+  <app-origin-pin></app-origin-pin>
 
   <shared-text-product
       *ngFor="let product of event.getProducts('general-text')"
