Add tests for shared/TextProduct component

--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,3 +1,13 @@
 <p>
   executive component works!
 </p>
+
+
+<ng-container *ngIf="eventService.event$ | async; let event">
+
+  <shared-text-product
+      *ngFor="let product of event.getProducts('general-text')"
+      [product]="product">
+  </shared-text-product>
+
+</ng-container>
