--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -10,4 +10,13 @@
       [product]="product">
   </shared-text-product>
 
+  <ng-container *ngIf="event.hasProducts('general-link')">
+    <h3>For More Information</h3>
+    <ul>
+    <li *ngFor="let product of event.getProducts('general-link')">
+      <shared-link-product [product]="product">
+      </shared-link-product>
+    </li>
+    </ul>
+  </ng-container>
 </ng-container>
